Fix content of the test console (jumping/flickering) when running automated tests + backport to FBTest 1.5
git-svn-id: http://fbug.googlecode.com/svn@5699 e969d3be-0e28-0410-a27f-dd5c76401a8b

--- a/fbtest/branches/fbtest1.6/skin/classic/testConsole.css
+++ b/fbtest/branches/fbtest1.6/skin/classic/testConsole.css
@@ -83,4 +83,5 @@ body {
 #progressMessage {
     color: black;
     padding-top: 3px;
+    text-align: right;
 }
